# auto-db-migration

./: .env_local  .gitignore  alembic.ini  cdk.json  compose.yml  package-lock.json  package.json  pyproject.toml
lib/: dbmigration-stack.ts
lib/lambda-functions/db_migration/: index.py
lib/lambda-layer/: requirements.txt
migrations/: env.py
migrations/versions/: 32f8252e73b6_.py  5629a5ea019f_.py  579d521e36d7_20241207_initial_migration.py  b4818906d0f9_.py
scripts/: copy-migration-files.sh
src/: database.py  models.py
test/: dbmigration.test.ts
