[tool.poetry]
name = "dbmigration"
version = "0.1.0"
description = ""
authors = ["toshiaki-suzuki <saki0x4bf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.14.0"
psycopg2-binary = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
